--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["Sebastian Kutter"]
 language = "de"
 multilingual = false
 src = "src"
-title = "Ansible Lab"
+title = "Ansible Workshop"
 
 [preprocessor]
 
