--- a/src/Vaultwarden/vaultwarden_install.yml
+++ b/src/Vaultwarden/vaultwarden_install.yml
@@ -1,13 +1,16 @@
-- name: Installiere Vaultwarden
+- name: Install Vaultwarden
   hosts: vault.lab.internal
   remote_user: root
   tasks:
-    - name: Docker-Repository hinzufügen
+    - name: Add Docker-Repository
       ansible.builtin.get_url:
         url: https://download.docker.com/linux/centos/docker-ce.repo
         dest: /etc/yum.repos.d/docker-ce.repo
+        owner: root
+        group: root
+        mode: "0644"
 
-    - name: Docker installieren
+    - name: Install Docker
       ansible.builtin.dnf:
         name:
           - docker-ce
@@ -15,36 +18,30 @@
           - docker-compose-plugin
         state: present
 
-    - name: Docker aktivieren und starten
+    - name: activate and start Docker
       ansible.builtin.systemd:
         name: docker
         enabled: true
         state: started
 
-    - name: Verzeichnis für Vaultwarden erstellen
+    - name: Create Dir for Vaultwarden
       ansible.builtin.file:
         path: /opt/vaultwarden
         state: directory
         mode: '0755'
+        owner: root
+        group: root
 
-    - name: Docker-Compose-Datei für Vaultwarden erstellen ---> oder man macht vorher ne file; ähnlich wie bei gitea.service
+    - name: Create Compose file for Docker
       ansible.builtin.copy:
+        src: files/docker-compose.yml
         dest: /opt/vaultwarden/docker-compose.yml
-        content: |
-          services:
-            vaultwarden:
-              image: vaultwarden/server:latest
-              container_name: vaultwarden
-              restart: unless-stopped
-              environment:
-                DOMAIN: "https://lab100-vaultwarden.teleport.int.skutter.de"
-                SIGNUPS_ALLOWED: "true"
-              volumes:
-                - ./data:/data
-              ports:
-                - 8000:80
+        owner: root
+        group: root
+        mode: "0644"
 
-    - name: Vaultwarden mit Docker Compose starten
-      ansible.builtin.command:
-        cmd: docker compose up -d
-        chdir: /opt/vaultwarden
+    - name: Create and start services
+      community.docker.docker_compose_v2:
+        project_src: vaultwarden
+      register: output
+
