--- a/src/Vaultwarden/vaultwarden_install.yml
+++ b/src/Vaultwarden/vaultwarden_install.yml
@@ -2,7 +2,7 @@
   hosts: vault.lab.internal
   remote_user: root
   tasks:
-    - name: Add Docker-Repository
+    - name: "Ensure Docker Repository exists"
       ansible.builtin.get_url:
         url: https://download.docker.com/linux/centos/docker-ce.repo
         dest: /etc/yum.repos.d/docker-ce.repo
@@ -10,7 +10,7 @@
         group: root
         mode: "0644"
 
-    - name: Install Docker
+    - name: "Ensure Docker and Docker Compose are installed"
       ansible.builtin.dnf:
         name:
           - docker-ce
@@ -18,30 +18,29 @@
           - docker-compose-plugin
         state: present
 
-    - name: activate and start Docker
+    - name: "Ensure docker is enabled and started"
       ansible.builtin.systemd:
         name: docker
         enabled: true
         state: started
 
-    - name: Create Dir for Vaultwarden
+    - name: "Ensure directory for Vaultwarden exists"
       ansible.builtin.file:
         path: /opt/vaultwarden
         state: directory
-        mode: '0755'
         owner: root
         group: root
+        mode: '0755'
 
-    - name: Copy Compose file for Docker
-      ansible.builtin.copy:
-        src: files/docker-compose.yml
+    - name: "Ensure docker-compose.yml exists and is correct"
+      ansible.builtin.template:
+        src: docker-compose.yml.j2
         dest: /opt/vaultwarden/docker-compose.yml
         owner: root
         group: root
         mode: "0644"
 
-    - name: Create and start services
+    - name: "Ensure Compose project is started"
       community.docker.docker_compose_v2:
-        project_src: vaultwarden
-      register: output
-
+        project_src: /opt/vaultwarden
+        state: present
